Transpiler: Diverse Erweiterungen